Bug: fixing google auth
